0027929: Methods D0 and D1 for trimmed offset surface return different values if the surface has osculating surface

Using osculating surface is forbidden if the normal to basis (for offset) surface is well defined.

Creation of test case for this issue.
Adjusting test cases according to their new behavior.